--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>RegExp</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         <input type="email" name="user-mail" id="user-mail" required>
         <label for="user-text">Введите ваш текст:</label>
         <textarea name="user-text" id="user-text" required></textarea>
-        <input type="button" value="Отправить" id="valid-btn">
+        <input type="button" value="Отправить" id="check-btn">
     </form>
 
     <script>
